crates/gob-symbols/tests/snapshots/corpus__python_apply.snap
---
source: crates/gob-symbols/tests/corpus.rs
expression: out
---
== term ==
(unit "file" "impl" @python (unit "function" "impl" name="g" (group "sequence" (lit "name" "g") (lit "(" "(") (lit ")" ")")) (group "sequence" (python.pass_statement (lit "pass" "pass")))) (unit "function" "impl" name="f" (group "sequence" (lit "name" "f") (lit "(" "(") (lit ")" ")")) (group "sequence" (python.expression_statement (apply "call" (ref "g"))) (python.expression_statement (apply "call" (ref "f.attr.m"))))))
== scope graph ==
S0
S1 lexical>S0:Must
S2 lexical>S1:Must
S3 lexical>S1:Must
D0 S1 Unit "g" Must
D1 S1 Unit "f" Must
R0 S3 must D0
R1 S3 unknown "f.attr.m"

== file ==
fidelity F2 status Complete
== symbols ==
tests/corpus/python/ops/apply.py::g Function Public parent=
tests/corpus/python/ops/apply.py::f Function Public parent=
== edges ==
Calls tests/corpus/python/ops/apply.py::f -> tests/corpus/python/ops/apply.py::g Must None None
Calls tests/corpus/python/ops/apply.py::f -> ? Unknown Some(Unbound) Some("m")
